--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/14-UVM-K-12-STEM-Calendar/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/14-UVM-K-12-STEM-Calendar/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-06-12T14:46:25Z</date>
+						<date>2019-07-03T16:45:35Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -62,21 +62,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5SEHlmzIRPnE
-								h1Zlyu2W+A==
+								TPGeujKpTzHL
+								QR5lGhvUSw==
 								</data>
 								<key>Size</key>
-								<integer>35205</integer>
+								<integer>35739</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZP2FJ/yve/bb
-								UMUDEFQ7OA==
+								v9Af7SEGojgo
+								zGOufpUslA==
 								</data>
 								<key>Size</key>
-								<integer>68310</integer>
+								<integer>69192</integer>
 							</dict>
 							<key>files/stacks-image-e97f241-400x164.png</key>
 							<dict>
@@ -92,31 +92,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9MXCK8CXx1kP
-								U4UdZQZNAw==
+								mmcZfbHmchJb
+								SfGRtH1XKQ==
 								</data>
 								<key>Size</key>
-								<integer>91778</integer>
+								<integer>92434</integer>
 							</dict>
 							<key>files/stacks_page_page85.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								3GZTnkJGR5PN
-								dwhualqbLg==
+								rViU3tsV0qcD
+								M3P3sTH9gQ==
 								</data>
 								<key>Size</key>
-								<integer>24349</integer>
+								<integer>23922</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								9UtUrrl6pnaP
-								yisKUzl9Kg==
+								YulkOTAOPm0X
+								kL69fuxsyg==
 								</data>
 								<key>Size</key>
-								<integer>35979</integer>
+								<integer>36146</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
