--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-02T16:12:10Z</date>
+						<date>2019-07-07T16:01:29Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -208,16 +208,6 @@
 								<key>Size</key>
 								<integer>336849</integer>
 							</dict>
-							<key>files/stacks-image-579eb0e-250x260.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								vK7f/XKTwh+c
-								rFx3vAmGnA==
-								</data>
-								<key>Size</key>
-								<integer>105735</integer>
-							</dict>
 							<key>files/stacks-image-5dab26b-250x260.png</key>
 							<dict>
 								<key>Digest</key>
@@ -368,6 +358,26 @@
 								<key>Size</key>
 								<integer>92633</integer>
 							</dict>
+							<key>files/stacks-image-d01a50c-250x260.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								ZZSIYPeBEnKx
+								YUj+niOXFQ==
+								</data>
+								<key>Size</key>
+								<integer>87370</integer>
+							</dict>
+							<key>files/stacks-image-d01a50c-250x260@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								NGQcg/6XK9RY
+								QgMAiNyUSQ==
+								</data>
+								<key>Size</key>
+								<integer>289213</integer>
+							</dict>
 							<key>files/stacks-image-e97f241-400x164.png</key>
 							<dict>
 								<key>Digest</key>
@@ -402,11 +412,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								2ZoNF5YpjHEj
-								HUvwA4/9xg==
+								E1sz9HXEaeV2
+								gzkchfFj+A==
 								</data>
 								<key>Size</key>
-								<integer>90819</integer>
+								<integer>90917</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
