--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/13-Seminars-0026-Tutorials/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/13-Seminars-0026-Tutorials/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-08T20:15:07Z</date>
+						<date>2019-07-08T21:25:59Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -102,11 +102,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								D5fQsvnwfB9K
-								cP3wsXxfSA==
+								5cgJUjT/TNWU
+								okFjAW3iIA==
 								</data>
 								<key>Size</key>
-								<integer>98676</integer>
+								<integer>100910</integer>
 							</dict>
 							<key>files/stacks_page_page87.js</key>
 							<dict>
@@ -122,11 +122,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5Swzilil24M6
-								FXNJsKEqgw==
+								6w3c/co9CWvl
+								/3rBMHLCjg==
 								</data>
 								<key>Size</key>
-								<integer>38770</integer>
+								<integer>40165</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
