--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/13-Seminars-0026-Tutorials/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/13-Seminars-0026-Tutorials/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-08T21:25:59Z</date>
+						<date>2019-07-08T21:32:21Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -102,11 +102,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5cgJUjT/TNWU
-								okFjAW3iIA==
+								d4MjqLA2tusr
+								QUHUZJ1tbg==
 								</data>
 								<key>Size</key>
-								<integer>100910</integer>
+								<integer>105378</integer>
 							</dict>
 							<key>files/stacks_page_page87.js</key>
 							<dict>
@@ -122,11 +122,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								6w3c/co9CWvl
-								/3rBMHLCjg==
+								lv6ga8gZAExr
+								Zg/A+nv/QQ==
 								</data>
 								<key>Size</key>
-								<integer>40165</integer>
+								<integer>42653</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
