--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/13-Seminars-0026-Tutorials/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/13-Seminars-0026-Tutorials/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-08T21:32:21Z</date>
+						<date>2019-07-09T18:26:40Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -122,11 +122,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								lv6ga8gZAExr
-								Zg/A+nv/QQ==
+								azTdJ4IGJOLq
+								u7rNYmre9A==
 								</data>
 								<key>Size</key>
-								<integer>42653</integer>
+								<integer>42532</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
