CSE Summit edits
CSE Summit edits

--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -14894,7 +14894,7 @@
 					<key>page86 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-08T20:15:06Z</date>
+						<date>2019-07-10T16:59:27Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14973,11 +14973,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								0pMculnL9v3X
-								wmNnrP+DwA==
+								9DoaP2w0G7/K
+								MgXKGTqxxA==
 								</data>
 								<key>Size</key>
-								<integer>19825</integer>
+								<integer>20202</integer>
 							</dict>
 							<key>files/stacks-image-a86827b-250x250.jpg</key>
 							<dict>
@@ -15003,11 +15003,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								tt6feU6wcYVa
-								4LOKgv9ZWA==
+								HD3BERbyXHC+
+								0+gtFt6oNw==
 								</data>
 								<key>Size</key>
-								<integer>106597</integer>
+								<integer>108739</integer>
 							</dict>
 							<key>files/stacks_page_page86.js</key>
 							<dict>
@@ -15023,11 +15023,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								BCj9cY9ic86c
-								LjAEmsrsnQ==
+								KGgnQyoq3IxD
+								Hx9jNXzYow==
 								</data>
 								<key>Size</key>
-								<integer>50521</integer>
+								<integer>53155</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -15344,7 +15344,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-09T18:26:40Z</date>
+						<date>2019-07-10T16:59:27Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -16423,8 +16423,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								+otgHZXQjPPb
-								7biDVlB19A==
+								rP3xCOtCexXY
+								v6dH+Nq+/A==
 								</data>
 								<key>Size</key>
 								<integer>3830</integer>
@@ -16581,7 +16581,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcFqifd8KiyADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcFrKH/8sCmADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -16591,14 +16591,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwWqJ93wq
-				zIAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwWsof/yw
+				0YAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBaon3fCr+
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBayh//LEM
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -16608,7 +16608,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBaon3fCsfgAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBayh//LEtgAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -16618,7 +16618,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBaon3fCtBgAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBayh//LH/gAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
