--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/17-CS-Education-Summit/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/17-CS-Education-Summit/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-08T20:15:06Z</date>
+						<date>2019-07-10T16:59:27Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -112,11 +112,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								0pMculnL9v3X
-								wmNnrP+DwA==
+								9DoaP2w0G7/K
+								MgXKGTqxxA==
 								</data>
 								<key>Size</key>
-								<integer>19825</integer>
+								<integer>20202</integer>
 							</dict>
 							<key>files/stacks-image-a86827b-250x250.jpg</key>
 							<dict>
@@ -142,11 +142,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								tt6feU6wcYVa
-								4LOKgv9ZWA==
+								HD3BERbyXHC+
+								0+gtFt6oNw==
 								</data>
 								<key>Size</key>
-								<integer>106597</integer>
+								<integer>108739</integer>
 							</dict>
 							<key>files/stacks_page_page86.js</key>
 							<dict>
@@ -162,11 +162,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								BCj9cY9ic86c
-								LjAEmsrsnQ==
+								KGgnQyoq3IxD
+								Hx9jNXzYow==
 								</data>
 								<key>Size</key>
-								<integer>50521</integer>
+								<integer>53155</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
