--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/17-CS-Education-Summit/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/17-CS-Education-Summit/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-10T16:59:27Z</date>
+						<date>2019-07-23T19:07:06Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -162,11 +162,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								KGgnQyoq3IxD
-								Hx9jNXzYow==
+								zgpbgSuSwWZZ
+								FtXdPTMIdw==
 								</data>
 								<key>Size</key>
-								<integer>53155</integer>
+								<integer>53912</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
